fix issue with quotes in spacing classname

--- a/utils.css
+++ b/utils.css
@@ -48,7 +48,8 @@
 .cl-r {
   clear: right !important; }
 
-.cf:before, .cf:after {
+.cf:before,
+.cf:after {
   content: " ";
   display: table; }
 
@@ -71,7 +72,10 @@
   padding-bottom: 56.25%;
   height: 0;
   text-align: center; }
-  .intrinsic div, .intrinsic embed, .intrinsic object, .intrinsic iframe {
+  .intrinsic div,
+  .intrinsic embed,
+  .intrinsic object,
+  .intrinsic iframe {
     position: absolute !important;
     top: 0;
     left: 0;
@@ -97,196 +101,196 @@
   backface-visibility: hidden; }
 
 .mt-0 {
-  margin-top: 0; }
+  margin-top: 0 !important; }
 
 .mt-xxs {
-  margin-top: 0.14591em; }
+  margin-top: 0.14591em !important; }
 
 .mt-xs {
-  margin-top: 0.23608em; }
+  margin-top: 0.23608em !important; }
 
 .mt-s {
-  margin-top: 0.61805em; }
+  margin-top: 0.61805em !important; }
 
 .mt {
-  margin-top: 1em; }
+  margin-top: 1em !important; }
 
 .mt-l {
-  margin-top: 1.618em; }
+  margin-top: 1.618em !important; }
 
 .mt-xl {
-  margin-top: 4.2358em; }
+  margin-top: 4.2358em !important; }
 
 .mt-xxl {
-  margin-top: 6.85353em; }
+  margin-top: 6.85353em !important; }
 
 .pt-0 {
-  padding-top: 0; }
+  padding-top: 0 !important; }
 
 .pt-xxs {
-  padding-top: 0.14591em; }
+  padding-top: 0.14591em !important; }
 
 .pt-xs {
-  padding-top: 0.23608em; }
+  padding-top: 0.23608em !important; }
 
 .pt-s {
-  padding-top: 0.61805em; }
+  padding-top: 0.61805em !important; }
 
 .pt {
-  padding-top: 1em; }
+  padding-top: 1em !important; }
 
 .pt-l {
-  padding-top: 1.618em; }
+  padding-top: 1.618em !important; }
 
 .pt-xl {
-  padding-top: 4.2358em; }
+  padding-top: 4.2358em !important; }
 
 .pt-xxl {
-  padding-top: 6.85353em; }
+  padding-top: 6.85353em !important; }
 
 .mr-0 {
-  margin-right: 0; }
+  margin-right: 0 !important; }
 
 .mr-xxs {
-  margin-right: 0.14591em; }
+  margin-right: 0.14591em !important; }
 
 .mr-xs {
-  margin-right: 0.23608em; }
+  margin-right: 0.23608em !important; }
 
 .mr-s {
-  margin-right: 0.61805em; }
+  margin-right: 0.61805em !important; }
 
 .mr {
-  margin-right: 1em; }
+  margin-right: 1em !important; }
 
 .mr-l {
-  margin-right: 1.618em; }
+  margin-right: 1.618em !important; }
 
 .mr-xl {
-  margin-right: 4.2358em; }
+  margin-right: 4.2358em !important; }
 
 .mr-xxl {
-  margin-right: 6.85353em; }
+  margin-right: 6.85353em !important; }
 
 .pr-0 {
-  padding-right: 0; }
+  padding-right: 0 !important; }
 
 .pr-xxs {
-  padding-right: 0.14591em; }
+  padding-right: 0.14591em !important; }
 
 .pr-xs {
-  padding-right: 0.23608em; }
+  padding-right: 0.23608em !important; }
 
 .pr-s {
-  padding-right: 0.61805em; }
+  padding-right: 0.61805em !important; }
 
 .pr {
-  padding-right: 1em; }
+  padding-right: 1em !important; }
 
 .pr-l {
-  padding-right: 1.618em; }
+  padding-right: 1.618em !important; }
 
 .pr-xl {
-  padding-right: 4.2358em; }
+  padding-right: 4.2358em !important; }
 
 .pr-xxl {
-  padding-right: 6.85353em; }
+  padding-right: 6.85353em !important; }
 
 .mb-0 {
-  margin-bottom: 0; }
+  margin-bottom: 0 !important; }
 
 .mb-xxs {
-  margin-bottom: 0.14591em; }
+  margin-bottom: 0.14591em !important; }
 
 .mb-xs {
-  margin-bottom: 0.23608em; }
+  margin-bottom: 0.23608em !important; }
 
 .mb-s {
-  margin-bottom: 0.61805em; }
+  margin-bottom: 0.61805em !important; }
 
 .mb {
-  margin-bottom: 1em; }
+  margin-bottom: 1em !important; }
 
 .mb-l {
-  margin-bottom: 1.618em; }
+  margin-bottom: 1.618em !important; }
 
 .mb-xl {
-  margin-bottom: 4.2358em; }
+  margin-bottom: 4.2358em !important; }
 
 .mb-xxl {
-  margin-bottom: 6.85353em; }
+  margin-bottom: 6.85353em !important; }
 
 .pb-0 {
-  padding-bottom: 0; }
+  padding-bottom: 0 !important; }
 
 .pb-xxs {
-  padding-bottom: 0.14591em; }
+  padding-bottom: 0.14591em !important; }
 
 .pb-xs {
-  padding-bottom: 0.23608em; }
+  padding-bottom: 0.23608em !important; }
 
 .pb-s {
-  padding-bottom: 0.61805em; }
+  padding-bottom: 0.61805em !important; }
 
 .pb {
-  padding-bottom: 1em; }
+  padding-bottom: 1em !important; }
 
 .pb-l {
-  padding-bottom: 1.618em; }
+  padding-bottom: 1.618em !important; }
 
 .pb-xl {
-  padding-bottom: 4.2358em; }
+  padding-bottom: 4.2358em !important; }
 
 .pb-xxl {
-  padding-bottom: 6.85353em; }
+  padding-bottom: 6.85353em !important; }
 
 .ml-0 {
-  margin-left: 0; }
+  margin-left: 0 !important; }
 
 .ml-xxs {
-  margin-left: 0.14591em; }
+  margin-left: 0.14591em !important; }
 
 .ml-xs {
-  margin-left: 0.23608em; }
+  margin-left: 0.23608em !important; }
 
 .ml-s {
-  margin-left: 0.61805em; }
+  margin-left: 0.61805em !important; }
 
 .ml {
-  margin-left: 1em; }
+  margin-left: 1em !important; }
 
 .ml-l {
-  margin-left: 1.618em; }
+  margin-left: 1.618em !important; }
 
 .ml-xl {
-  margin-left: 4.2358em; }
+  margin-left: 4.2358em !important; }
 
 .ml-xxl {
-  margin-left: 6.85353em; }
+  margin-left: 6.85353em !important; }
 
 .pl-0 {
-  padding-left: 0; }
+  padding-left: 0 !important; }
 
 .pl-xxs {
-  padding-left: 0.14591em; }
+  padding-left: 0.14591em !important; }
 
 .pl-xs {
-  padding-left: 0.23608em; }
+  padding-left: 0.23608em !important; }
 
 .pl-s {
-  padding-left: 0.61805em; }
+  padding-left: 0.61805em !important; }
 
 .pl {
-  padding-left: 1em; }
+  padding-left: 1em !important; }
 
 .pl-l {
-  padding-left: 1.618em; }
+  padding-left: 1.618em !important; }
 
 .pl-xl {
-  padding-left: 4.2358em; }
+  padding-left: 4.2358em !important; }
 
 .pl-xxl {
-  padding-left: 6.85353em; }
+  padding-left: 6.85353em !important; }
 
 .ml-a {
   margin-left: auto !important; }
